[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MatPlotX"
version = "0.0.1"
description = "A Textual (Textualize) TUI wrapper for Matplotlib"
authors = [{name = "piratax007"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.60.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6",
    "mypy>=1.10"
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]